payment-gateway-providers/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: payment-gateway-providers
  namespace: payments
spec:
  rules:
    - host: payments-dev.zebrands.mx
      http:
        paths:
        - path: /v1/
          pathType: Prefix
          backend:
            service:
              name: payment-gateway-providers
              port:
                number: 80  
        - path: /graphql
          pathType: Prefix
          backend:
            service:
              name: payment-gateway-providers
              port:
                number: 80
